# secrets-machine

./: .editorconfig  .gitignore  Cargo.toml  README.md  SECURITY.md  install.sh  secrets_machine.toml
.github/workflows/: build-pull.yml  build.yml  release.yml  rust-clippy.yml  test-pull.yml  test.yml
scripts/: release_and_copy.sh
src/: cli.rs  main.rs
src/models/: commands_config.rs  config.rs  full_config.rs  general_settings.rs  mod.rs  project_config.rs  secret_source.rs  user_config.rs
tests/: common.rs  test_aliases.rs  test_bitwarden.rs  test_config.rs  test_env_vars.rs  test_execution.rs  test_run.rs  test_z_teardown.rs
tests/assets/: config.toml  secrets.json  secrets_machine.toml  secrets_machine_2.toml  secrets_machine_bw.toml  user_config.toml
tests/compiled/: eval_command.sh  test_all.sh
