[package]
  name         = "sm"
  version      = "0.1.7"
  edition      = "2021"
  rust-version = "1.80.0"
  build        = "build.rs"

[build-dependencies]
  built = "0.8.0"

[dependencies]
  base64 = "0.22.1"
  bytes = "1.10.1"
  clap = { version = "4.5.39", features = ["derive", "cargo"] }
  clap_complete = "4.5.54"
  dirs = "6.0.0"
  dotenvy = { git = "https://github.com/allan2/dotenvy", branch = "master" }
  fastrand = "2.3.0"
  futures = "0.3.31"
  keyring = { version = "3.6.2", features = [
    "async-secret-service",
    "apple-native",
    "windows-native",
    "async-io",
    "crypto-rust",
  ] }
  lazy_static = "1.5.0"
  os_info = "3.11.0"
  regex = "1.11.1"
  reqwest = { version = "0.12.19", features = [
    "json",
    "rustls-tls",
  ], default-features = false }
  rpassword = "7.4.0"
  serde = "1.0.219"
  serde_json = { version = "1.0.140", features = ["std"] }
  tokio = { version = "1.45.1", features = [
    "macros",
    "signal",
    "fs",
    "process",
    "rt-multi-thread",
    "io-util",
    "io-std",
  ] }
  toml = "0.8.22"
